--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "morgan": "^1.9.1",
+    "url-regex": "^5.0.0",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   },
