--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "debug": "ndb nodemon src/server.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js",
     "test": "mocha --require test/setup.js",
     "predeploy": "npm audit",
@@ -19,7 +20,9 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "knex": "^0.19.1",
     "morgan": "^1.9.1",
+    "pg": "^7.12.0",
     "url-regex": "^5.0.0",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
@@ -28,6 +31,7 @@
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.1.0",
     "supertest": "^4.0.2"
   }
 }
